--- a/proyecto/baseapp/templates/baseapp/tarea_form.html
+++ b/proyecto/baseapp/templates/baseapp/tarea_form.html
@@ -1,4 +1,5 @@
 <h1>Formulario de Tareas</h1>
+<a href="{% url 'tareas'%}">Volver</a>
 <form method="POST" action="">
     {% csrf_token %}
     {{form.as_p}}
