--- a/proyecto/baseapp/templates/baseapp/tarea_list.html
+++ b/proyecto/baseapp/templates/baseapp/tarea_list.html
@@ -4,12 +4,14 @@
     <tr>
         <th>Elementos</th>
         <th></th>
+        <th></th>
     </tr>
 
     {% for tarea in tareas %}
     <tr>
         <td>{{tarea.titulo}}</td>
         <td><a href="{% url 'tarea' tarea.id %}">Ver</a></td>
+        <td><a href="{% url 'editar-tarea' tarea.id %}">Editar</a></td>
     </tr>
     {% empty %}
     <h3>No hay elementos en la lista</h3>
