--- a/proyecto/baseapp/templates/baseapp/tarea_list.html
+++ b/proyecto/baseapp/templates/baseapp/tarea_list.html
@@ -5,6 +5,8 @@
         <th>Elementos</th>
         <th></th>
         <th></th>
+        <th></th>
+
     </tr>
 
     {% for tarea in tareas %}
@@ -12,6 +14,8 @@
         <td>{{tarea.titulo}}</td>
         <td><a href="{% url 'tarea' tarea.id %}">Ver</a></td>
         <td><a href="{% url 'editar-tarea' tarea.id %}">Editar</a></td>
+        <td><a href="{% url 'eliminar-tarea' tarea.id %}">Eliminar</a></td>
+
     </tr>
     {% empty %}
     <h3>No hay elementos en la lista</h3>
