--- a/proyecto/baseapp/templates/baseapp/tarea_list.html
+++ b/proyecto/baseapp/templates/baseapp/tarea_list.html
@@ -2,7 +2,7 @@
 <p>{{request.user}}</p>
 <a href="">Salir</a>
 {% else%}
-<a href="">Ingresar</a>
+<a href="{% url 'login' %}">Ingresar</a>
 {% endif %}
 <hr>
 
