--- a/proyecto/baseapp/templates/baseapp/login.html
+++ b/proyecto/baseapp/templates/baseapp/login.html
@@ -1,7 +1,9 @@
-<h1>ingresar</h1>
+<h1>Ingresar</h1>
 <form method="POST">
 
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Ingresar">
 </form>
+<!-- Agregamos un link de registro-->
+<p>No tienes una Cuenta? <a href="{% url 'registro' %}">Registrate</a></p>
