--- a/proyecto/baseapp/templates/baseapp/tarea_confirm_delete.html
+++ b/proyecto/baseapp/templates/baseapp/tarea_confirm_delete.html
@@ -1,7 +1,17 @@
-<a href="{% url 'tareas' %}">Volver</a>
+{% extends 'baseapp/principal.html' %}
 
-<form method="POST">
-    {% csrf_token %}
-    <p>Vas a eliminar esta tarea:"{{tarea}}"</p>
-    <input type="submit" value="Eliminar">
-</form>
+{% block content %}
+
+<div class="barra-superior">
+    <a href="{% url 'tareas' %}">&#x1F860; Volver</a>
+</div>
+
+<div class="cuerpo-tarjeta">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Vas a eliminar esta tarea: "{{tarea}}"</p>
+        <input class='boton' type="submit" value="Eliminar">
+    </form>
+</div>
+
+{% endblock content %}
