--- a/proyecto/baseapp/templates/baseapp/tarea_list.html
+++ b/proyecto/baseapp/templates/baseapp/tarea_list.html
@@ -1,63 +1,48 @@
-{% if request.user.is_authenticated %}
-<p>{{request.user}}</p>
-<form method="post" action="{% url 'logout' %}">
-    {% csrf_token %}
-    <button type="submit">Salir</button>
-</form>
-{% else%}
-<a href="{% url 'login' %}">Ingresar</a>
-{% endif %}
-<hr>
-<h1>Listas Pendientes</h1>
-<!-- Formulario de búsqueda -->
-<form method="GET">
-    <input type="text" name="area-buscar" value="{{ valor_buscado }}">
-    <input type="submit" value="Buscar">
-</form>
-<br>
-<a href="{% url 'crear-tarea' %}">Crear Nueva Tarea</a>
+{% extends 'baseapp/principal.html' %}
 
-<table>
-    <tr>
-        <th>Elementos</th>
-        <th></th>
-        <th></th>
-        <th></th>
-    </tr>
+{% block content %}
 
-    {% for tarea in tareas %}
-    <tr>
-        <td>{{ tarea.titulo }}</td>
-        <td><a href="{% url 'tarea' tarea.id %}">Ver</a></td>
-        <td><a href="{% url 'editar-tarea' tarea.id %}">Editar</a></td>
-        <td><a href="{% url 'eliminar-tarea' tarea.id %}">Eliminar</a></td>
-    </tr>
-    {% empty %}
-    <h3>No hay elementos en la lista</h3>
-    {% endfor %}
-</table>
-
-<!-- Controles de paginación -->
-<div class="pagination">
-    <span class="step-links">
-        {% if is_paginated %}
-        {% if page_obj.has_previous %}
-        <a href="?page=1{% if valor_buscado %}&area-buscar={{ valor_buscado }}{% endif %}">&laquo; Primera</a>
-        <a
-            href="?page={{ page_obj.previous_page_number }}{% if valor_buscado %}&area-buscar={{ valor_buscado }}{% endif %}">Anterior</a>
-        {% endif %}
-
-        <span class="current">
-            Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}
-        </span>
-
-        {% if page_obj.has_next %}
-        <a
-            href="?page={{ page_obj.next_page_number }}{% if valor_buscado %}&area-buscar={{ valor_buscado }}{% endif %}">Siguiente</a>
-        <a
-            href="?page={{ page_obj.paginator.num_pages }}{% if valor_buscado %}&area-buscar={{ valor_buscado }}{% endif %}">Última
-            &raquo;</a>
-        {% endif %}
-        {% endif %}
-    </span>
+<div class="barra-superior">
+    <div>
+        <h1>Hola {{request.user|title}}</h1>
+        <h3 style="margin:0">Tienes <i>{{count}}</i> tarea{{count|pluralize}} incompleta{{count|pluralize}}</h3>
+    </div>
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}">Salir</a>
+    {% else %}
+    <a href="{% url 'login' %}">Ingresar</a>
+    {% endif %}
 </div>
+
+<div id="envoltorio-agregar-buscar">
+    <form method="GET" style="margin-top: 20px; display: flex;">
+        <input type="text" name="area-buscar" value="{{valor_buscado}}">
+        <input class='boton' type="submit" value="buscar">
+    </form>
+    <a id='enlace-agregar' href="{% url 'crear-tarea' %}">&#x1F7A5;</a>
+</div>
+
+<div class="envoltorio-items-tarea">
+    {% for tarea in tareas %}
+    <div class="envoltorio-tarea">
+        {% if tarea.completo %}
+        <div class="titulo-tarea">
+            <div class="icono-tarea-completa"></div>
+            <i><s><a href="{% url 'editar-tarea' tarea.id %}">{{tarea}}</a></s></i>
+        </div>
+        <a class='enlace-eliminar' href="{% url 'eliminar-tarea' tarea.id %}">&#x2A2F;</a>
+        {% else %}
+        <div class="titulo-tarea">
+            <div class="icono-tarea-incompleta"></div>
+            <a href="{% url 'editar-tarea' tarea.id %}">{{tarea}}</a>
+        </div>
+        <a class='enlace-eliminar' href="{% url 'eliminar-tarea' tarea.id %}">&#x2A2F;</a>
+        {% endif %}
+    </div>
+
+    {% empty %}
+    <h3>No hay elementos en esta lista</h3>
+    {% endfor %}
+</div>
+
+{% endblock content %}
