cambios en el front

--- a/proyecto/baseapp/templates/baseapp/tarea_list.html
+++ b/proyecto/baseapp/templates/baseapp/tarea_list.html
@@ -41,7 +41,9 @@
     </div>
 
     {% empty %}
-    <h3>No hay elementos en esta lista</h3>
+    <div style="text-align: center; width: 100%; padding: 10px;">
+        <h3 style="margin: 0; color: #4B5156;">No hay elementos en esta lista</h3>
+    </div>
     {% endfor %}
 </div>
 
