--- a/proyecto/baseapp/templates/baseapp/principal.html
+++ b/proyecto/baseapp/templates/baseapp/principal.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
         body {
@@ -147,6 +146,15 @@
 
         .cuerpo-tarjeta {
             padding: 20px;
+        }
+
+        .mensaje-vacio {
+            text-align: center;
+            width: 100%;
+            color: #4B5156;
+            font-style: italic;
+            background-color: #fff;
+            padding: 0px;
         }
     </style>
 </head>
